1-Cluster-Setup/1.1-Default-Network-Behavior.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: orion
  name: g04

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: backend
  name: backend
  namespace: g04
spec:
  containers:
  - image: bmuschko/nodejs-hello-world:1.0.0
    name: hello
    ports:
    - containerPort: 3000
  restartPolicy: Never

---
# k run frontend -n g04 --image=alpine --labels="tier=frontend" --restart=Never $do -o yaml -- /bin/sh -c "while true; do sleep 5; done;"
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: frontend
  name: frontend
  namespace: g04
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do sleep 5; done;
    image: alpine
    name: other
  restartPolicy: Never

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: outside
  name: other
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do sleep 5; done;
    image: alpine
    name: other
  restartPolicy: Never
