1-Cluster-Setup/1.4-Prep-Infra-For-Ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: t75

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: t75
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.14.2
        name: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1 
kind: Service 
metadata:
  name: accounting-service
  namespace: t75 
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80
